--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -4,6 +4,16 @@
 
     "clientsettings": {
     "nodes": [
+{
+          "host": "ult8.falix.gg:19351",
+         "port": 19351,
+         "password": "youshallnotpass"
+         },
+{
+          "host": "ult10.falix.gg",
+         "port": 25977,
+         "password": "youshallnotpass"
+         }
       {
           "host": "ult4.falix.gg",
          "port": 27434,
