--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -5,8 +5,8 @@
     "clientsettings": {
     "nodes": [
       {
-         "host": "ult10.falix.gg",
-         "port": 25977,
+         "host": "001.finland.eu.hosts.dynamichost.xyz",
+         "port": 23670,
          "password": "youshallnotpass"
          }
      
