--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -5,8 +5,8 @@
     "clientsettings": {
     "nodes": [
       {
-         "host": "lava.link",
-         "port": 80,
+         "host": "5.196.239.155",
+         "port": 2333,
          "password": "anything as a password"
          }
      
