--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -7,7 +7,7 @@
       {
          "host": "5.196.239.155",
          "port": 2333,
-         "password": "anything as a password"
+         "password": "youshallnotpass"
          }
      
      ]
