--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -8,7 +8,25 @@
          "host": "5.196.239.155",
          "port": 2333,
          "password": "youshallnotpass"
-         }
+         },
+      {
+    id: "Main",
+    host: "fi3.flarenodes.net",
+    port: 8623,
+    pass: "youshallnotpass"
+  },
+{
+    id: "Main",
+    host: "de3.flarenodes.net",
+    port: 9592,
+    pass: "youshallnotpass"
+  },
+{
+    id: "Main",
+    host: "fi2.flarenodes.net",
+    port: ,7301
+    pass: "youshallnotpass"
+  },
      
      ]
   },
