--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
+    "engines": {
+    "node": "12.x"
+  },
   "author": "Tomato#6966",
   "license": "GPL-3.0",
   "repository": {
