--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -5,7 +5,7 @@
     "clientsettings": {
     "nodes": [
       {
-         "host": "5.196.239.155",
+         "host": "zbb52499e-z1c4d01f3-gtw.qovery.io",
          "port": 2333,
          "password": "youshallnotpass"
          }
