--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -7,7 +7,7 @@
       {
          "host": "zbb52499e-z192e39c8-gtw.qovery.io",
          "port": 2333,
-         "password": "youshallnotpass"
+         "password": "youshallnotguessme"
          }
      
      ]
