--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -5,9 +5,9 @@
     "clientsettings": {
     "nodes": [
       {
-         "host": "https://zbb52499e-z192e39c8-gtw.qovery.io/",
+         "host": "zbb52499e-z192e39c8-gtw.qovery.io",
          "port": 2333,
-         "password": "youshallnotguessme"
+         "password": "youshallnotpass"
          }
      
      ]
