--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -8,7 +8,7 @@
          "host": "https://zbb52499e-z8f67df6b-gtw.qovery.io",
          "port": 2333,
          "password": "youshallnotpass",
-         "secure": "true"
+         "secure": true
          }
      
      ]
