--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -5,10 +5,10 @@
     "clientsettings": {
     "nodes": [
       {
-         "host": "zbb52499e-z5c3254da-gtw.qovery.io",
+         "host": "zf0f7da1e-z031321e0-gtw.qovery.io",
          "port": 2333,
-         "password": "youshallnotpass",
-         "secure": true
+         "password": "youshallnotpass"
+
          }
      
      ]
