--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -7,7 +7,7 @@
       {
          "host": "zf0f7da1e-z031321e0-gtw.qovery.io",
          "port": 2333,
-         "password": "youshallnotpass"
+         "password": "promusic"
 
          }
      
