--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -5,9 +5,11 @@
     "clientsettings": {
     "nodes": [
       {
+         "identifier": "NODE-MAIN-1",
          "host": "zf0f7da1e-z031321e0-gtw.qovery.io",
          "port": 2333,
-         "password": "promusic"
+         "password": "promusic",
+         "secure": true
 
          }
      
