--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -6,9 +6,9 @@
     "nodes": [
       {
          "identifier": "NODE-MAIN-1",
-         "host": "zf0f7da1e-z031321e0-gtw.qovery.io",
+         "host": "LostPriceyCarriers.atharv111.repl.co",
          "port": 443,
-         "password": "promusic",
+         "password": "youshallnotpass",
          "secure": true
 
          }
