--- a/botconfig/config.json
+++ b/botconfig/config.json
@@ -6,9 +6,9 @@
     "nodes": [
       {
          "identifier": "NODE-MAIN-1",
-         "host": "LostPriceyCarriers.atharv111.repl.co",
+         "host": "zfbbb071e-z06932577-gtw.qovery.io",
          "port": 443,
-         "password": "youshallnotpass",
+         "password": "promusic",
          "secure": true
 
          }
